BGP-7834: Upgrade recurly Java library to JDK 13 including dependencies (non-reverted change)